--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.Register"></activity>
+        <activity android:name=".activity.Register" />
+        <activity
+            android:name=".usermain"
+            android:label="@string/title_activity_usermain"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
