--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
         <activity android:name=".Register" />
         <activity
             android:name=".usermain"
-            android:label="@string/title_activity_usermain"
-            android:theme="@style/AppTheme"></activity>
+            android:label="@string/title_activity_usermain"></activity>
     </application>
 
 </manifest>
