--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Register" />
+
+        <activity android:name=".Register" >
+
+        </activity>
         <activity
             android:name=".usermain"
-            android:label="@string/title_activity_usermain"></activity>
+            android:label="@string/title_activity_usermain">
+        </activity>
     </application>
 
 </manifest>
