--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    useLibrary 'org.apache.http.legacy'
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
@@ -33,5 +34,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.google.android.gms:play-services-ads:10.2.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'org.apache.httpcomponents:httpcore:4.4.2'
     testCompile 'junit:junit:4.12'
 }
