--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'org.apache.httpcomponents:httpcore:4.4.2'
     testCompile 'junit:junit:4.12'
+
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
