--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         -->
-        <activity android:name=".Register.Register" />
+        <activity android:name=".Register.RegisterActivity" />
         <activity
             android:name=".user"
             android:label="@string/title_activity_user"
