--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,16 +28,15 @@
         <activity android:name=".Register.RegisterActivity" />
         <activity
             android:name=".user"
-            android:label="@string/title_activity_user"
-            android:theme="@style/AppTheme" />
+            android:label="@string/title_activity_user" />
 
         <activity android:name=".Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
 
     </application>
 
