--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,25 +26,25 @@
             </intent-filter>
         </activity>
         -->
-        <activity
-            android:name=".Register.RegisterActivity"
-            />
+        <activity android:name=".Register.RegisterActivity" />
         <activity
             android:name=".user"
             android:label="@string/title_activity_user" />
-        <!--android:name=".Login.LoginActivity">
-               -->
-        <activity
+        <!-- android:name=".Login.LoginActivity"> -->
+        <activity android:name=".Login.LoginActivity">
+          <!--  <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            android:name=".Login.LoginActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER"
-                />
-        </intent-filter>
-    </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>-->
+        </activity>
+        <activity android:name=".SplashActivity.Splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
