--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,15 +29,14 @@
         <activity
             android:name=".user"
             android:label="@string/title_activity_user" />
-
         <activity android:name=".Login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
+        <activity android:name=".RetrivePassword.RetrivePasswordActivity"></activity>
     </application>
 
 </manifest>
