--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
         </activity>
         <activity android:name=".Screanlock.Screanlock" />
         <activity android:name=".help.opmodehelp"
-            >  android:screenOrientation="landscape"
+            android:screenOrientation="landscape"
+            >
 
         </activity>
     </application>
