--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,15 +45,15 @@
         <activity android:name=".SplashActivity.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".Screanlock.Screanlock" />
-        <activity android:name=".help.opmodehelp"
-            android:screenOrientation="landscape"
-            >
-
-        </activity>
+        <activity
+            android:name=".help.opmodehelp"
+            android:screenOrientation="landscape"></activity>
+        <activity android:name=".help.view"></activity>
     </application>
 
 </manifest>
