--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.liyuaninc.liyuan">
+
     <!-- 往SDCard中写入数据的权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
 
     <application
         android:allowBackup="true"
@@ -55,6 +55,7 @@
             android:screenOrientation="landscape" />
         <activity android:name=".help.view" />
         <activity android:name=".RetrivePassword.RetrivePasswordActivity" />
+        <activity android:name=".ftc_season.season2016.season_main_2016"></activity>
     </application>
 
 </manifest>
