--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,8 @@
             android:screenOrientation="landscape" />
         <activity android:name=".help.view" />
         <activity android:name=".RetrivePassword.RetrivePasswordActivity" />
-        <activity android:name=".ftc_season.season2016.season_main_2016"></activity>
+        <activity android:name=".ftc_season.season2016.season_main_2016" />
+        <activity android:name=".ftc_season.season2016.season_data"></activity>
     </application>
 
 </manifest>
