--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,8 @@
         <activity android:name=".help.view" />
         <activity android:name=".RetrivePassword.RetrivePasswordActivity" />
         <activity android:name=".ftc_season.season2016.season_main_2016" />
-        <activity android:name=".ftc_season.season2016.season_data"></activity>
+        <activity android:name=".ftc_season.season2016.season_data" />
+        <activity android:name=".ftc_season.season2016.SDK"></activity>
     </application>
 
 </manifest>
