--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
         <activity android:name=".ftc_season.season2016.season_main_2016" />
         <activity android:name=".ftc_season.season2016.season_data" />
         <activity android:name=".ftc_season.season2016.SDK" />
-        <activity android:name=".alltest"></activity>
+        <activity android:name=".alltest" />
+        <activity android:name=".test.toast_test"></activity>
     </application>
 
 </manifest>
