--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" android:required="true" />
+    <uses-permission
+        android:name="android.permission.WRITE_SETTINGS"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -33,6 +35,7 @@
             android:label="@string/title_activity_user" />
         <!-- android:name=".Login.LoginActivity"> -->
         <activity android:name=".Login.LoginActivity">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -58,7 +61,8 @@
         <activity android:name=".alltest" />
         <activity android:name=".test.toast_test" />
         <activity android:name=".ftc_season.season2017.season_data" />
-        <activity android:name=".ftc_season.season2017.season_main_2017"></activity>
+        <activity android:name=".ftc_season.season2017.season_main_2017" />
+        <activity android:name=".others.Developer_application"></activity>
     </application>
 
 </manifest>
