--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,8 @@
         <activity android:name=".ftc_season.season2017.season_data" />
         <activity android:name=".ftc_season.season2017.season_main_2017" />
         <activity android:name=".others.Developer_application" />
-        <activity android:name=".help.opmodeedit.opmode"></activity>
+        <activity android:name=".help.opmodeedit.opmode" />
+        <activity android:name=".writecode.writecode"></activity>
     </application>
 
 </manifest>
