上传代码更新

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,9 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".settings.rarcher.rarcherstart"></activity>
+        <activity android:name=".settings.rarcher.rarcherstart" />
+        <activity android:name=".writecode.writecode2" />
+        <activity android:name=".writecode.codeinfo"></activity>
     </application>
 
 </manifest>
