--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.liyuaninc.liyuantcapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -9,11 +10,11 @@
     <uses-permission
         android:name="android.permission.WRITE_SETTINGS"
         android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Splash.Splash">
@@ -26,6 +27,7 @@
         <activity android:name=".Login.LoginActivity" />
         <activity android:name=".Register.RegisterActivity" />
         <activity android:name=".Main.MainActivity"></activity>
+        <activity android:name=".aboutus.aboutus"></activity>
     </application>
 
 </manifest>
