--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,13 @@
     <application
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/liyuan"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Splash.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,7 +28,6 @@
         <activity android:name=".Register.RegisterActivity" />
         <activity android:name=".Main.MainActivity" />
         <activity android:name=".aboutus.aboutus" />
-        <activity android:name=".test" />
         <activity android:name=".Main.Fragments.competitiondetails.notification" />
         <activity android:name=".Main.Fragments.competitiondetails.result"></activity>
     </application>
