--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission
         android:name="android.permission.WRITE_SETTINGS"
         android:required="true" />
-
     <application
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
@@ -21,6 +20,7 @@
         <activity android:name=".Splash.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -29,7 +29,8 @@
         <activity android:name=".Main.MainActivity" />
         <activity android:name=".aboutus.aboutus" />
         <activity android:name=".Main.Fragments.competitiondetails.notification" />
-        <activity android:name=".Main.Fragments.competitiondetails.result"></activity>
+        <activity android:name=".Main.Fragments.competitiondetails.result" />
+        <activity android:name=".Main.Fragments.settingpic.emptyactivity"></activity>
     </application>
 
 </manifest>
